<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
            android:id="@+id/scan_measuring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/measure"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/scan_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/setting"
            android:textSize="16sp"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/scan_appid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="APP_ID : 123456789"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/qr_data_et"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/qr_data"/>
        <Button
            android:id="@+id/scanQrcode"
            android:layout_width="wrap_content"
            android:text="@string/qr_scan"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <EditText
        android:id="@+id/qr_time_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/qr_scan_hint"
        android:text="0"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/qr_test_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="qr_test"/>

        <TextView
            android:id="@+id/qr_data_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decode_qr_scan_content"/>
        <Button
            android:layout_width="wrap_content"
            android:id="@+id/kitchenBtn"
            android:text="@string/kitchen_scale"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <Button
            android:id="@+id/scanBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan"/>

        <Button
            android:id="@+id/stopBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop"/>

        <TextView
            android:id="@+id/scan_measuring_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/click_to_connect_device"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lvHeadLay"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:minHeight="50dp"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/nameTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:text="@string/name"/>

        <TextView
            android:id="@+id/modelTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:text="@string/mode"/>

        <TextView
            android:id="@+id/macTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:text="@string/mac"/>

        <TextView
            android:id="@+id/rssiTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/rssi"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/system_item_arrow"
            android:visibility="invisible"/>

    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>
