<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.ConnectActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingEnd="10dp"
        android:paddingStart="10dp">

        <Button
            android:id="@+id/connectBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end" />

        <TextView
            android:id="@+id/statusTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/weightTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/back_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:padding="8dp"
            android:text="@string/back" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/stroteDataTest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_generated_storage_data" />

            <EditText
                android:id="@+id/threshold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/please_enter_body_fat_change_control"
                android:inputType="numberDecimal"
                android:textSize="16sp" />

            <Button
                android:id="@+id/setThreshold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_body_fat_change" />
        </LinearLayout>

        <TextView
            android:id="@+id/hmacTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <Button
            android:id="@+id/testHmac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="扫描获取测试hmac"
            android:visibility="gone" />
    </LinearLayout>


    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>